# cuda-hft-miniProjects

./: CMakeLists.txt  README.md
common/include/: cuda_utils.h  timing.h
projects/market_data_parser/: CMakeLists.txt  README.md
projects/market_data_parser/include/: market_formats.h
projects/market_data_parser/src/: itch_format.cu  market_data_parser.cu
